# tttc_practice

clang/examples/: CMakeLists.txt
clang/examples/ImplicitCastCounter/: CMakeLists.txt  ImplicitCastCounter.cpp  test.cpp
